--- a/pixelart.html
+++ b/pixelart.html
@@ -33,7 +33,7 @@
     <section class="page-header">
         <div class="container">
             <h1>Pixel Art Gallery</h1>
-            <p>A collection of pixel art works created by Nikos Delivos</p>
+            <p>A collection of pixel art works created by me</p>
         </div>
     </section>
 
@@ -79,7 +79,7 @@
                     </div>
                     <div class="art-content">
                         <h3>Sableye</h3>
-                        <p>A pixel rendition of the Pokémon Sableye, capturing its mischievous nature and gem-like eyes.</p>
+                        <p>art of my favorite pokemon</p>
                         <div class="art-tags">
                             <span class="art-tag">Pokémon</span>
                             <span class="art-tag">Character</span>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="art-content">
                         <h3>El Gato</h3>
-                        <p>A simple yet charming pixel art cat, created as a practice in limited color palette techniques.</p>
+                        <p>A simple pixel art cat, created as a practice in limited color palette techniques.</p>
                         <div class="art-tags">
                             <span class="art-tag">Animal</span>
                             <span class="art-tag">Practice</span>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="art-content">
                         <h3>Plague Doctor</h3>
-                        <p>A detailed pixel art rendering of a plague doctor, emphasizing the iconic mask and historical attire.</p>
+                        <p>A detailed pixel art rendering of a plague doctor.</p>
                         <div class="art-tags">
                             <span class="art-tag">Character</span>
                             <span class="art-tag">Historical</span>
@@ -204,6 +204,25 @@
                         </div>
                     </div>
                 </div>
+
+                 <!-- Art Piece 9 -->
+
+                <div class="art-piece flex-item" data-img="assets/PixelArt/Orchidea_Animation_Mashup.gif" data-category="other">
+    <div class="art-image">
+        <img src="assets/PixelArt/Orchidea_Animation_Mashup.gif" alt="Orchidea Animation Mashup">
+    </div>
+    <div class="art-content">
+        <h3>Orchidea Animation Mashup</h3>
+        <p>A looping pixel animation mashup combining different animated elements into a cohesive scene.</p>
+        <div class="art-tags">
+            <span class="art-tag">Game Assets</span>
+            <span class="art-tag">Character</span>
+        </div>
+        <div class="art-meta">
+            <span><i class="fas fa-paint-brush"></i> Aseprite</span>
+        </div>
+    </div>
+</div>
             </div>
         </div>
     </section>
