--- a/allprojects.html
+++ b/allprojects.html
@@ -171,7 +171,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Scoundrel - Dungeon Crawler</h3>
-                        <p>A game played on the PCs console based on the card game Scoundrel.</p>
+                        <p>A game played on the PC's console based on the card game Scoundrel.</p>
                         <div class="project-tags">
                             <span class="project-tag">C#</span>
                             <span class="project-tag">.NET Core</span>
@@ -197,7 +197,26 @@
                             <a href="https://github.com/NikosDeliv/NikosDeliv.github.io" target="_blank"><i class="fab fa-github"></i> Source Code</a>
                         </div>
                     </div>
-                </div
+                </div>
+
+                <!-- Project 9 -->
+                <div class="project-card flex-item" data-category="web">
+                    <div class="project-image">
+                        <img src="assets/OrchideaIcon.png" alt="Orchidea - Desktop Pet">
+                    </div>
+                    <div class="project-content">
+                        <h3>Orchidea - Desktop Pet</h3>
+                        <p>An orchid mantis desktop pet to keep you company when you're working on stuff.</p>
+                        <div class="project-tags">
+                            <span class="project-tag">C#</span>
+                            <span class="project-tag">Game Dev</span>
+                            <span class="project-tag">Automation</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://nico18n3.itch.io/orchidea-a-desktop-pet" target="_blank"><i class="fas fa-gamepad"></i> Download</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
