--- a/allprojects.html
+++ b/allprojects.html
@@ -217,6 +217,24 @@
                         </div>
                     </div>
                 </div>
+
+                  <!-- Project 10 -->
+                <div class="project-card flex-item" data-category=".net">
+                    <div class="project-image">
+                        <img src="assets/RetroHubIcon.png" alt="RetroHub">
+                    </div>
+                    <div class="project-content">
+                        <h3>RetroHub</h3>
+                        <p>A ROM library manager for organizing and launching retro games with their respective emulators. Features drag-and-drop support and a grid based interface.</p>
+                        <div class="project-tags">
+                            <span class="project-tag">C#</span>
+                            <span class="project-tag">DataBase</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/NikosDeliv/RetroHub" target="_blank"><i class="fab fa-github"></i> Source Code</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
