--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="project-content">
                         <h3>GlimmerDex</h3>
-                        <p>A Shiny hunting companion app that helps players track their encounter counts while shiny hunting in PokÃ©mon games.</p>
+                        <p>A Shiny hunting companion app that helps players track their encounter counts while shiny hunting in Pokemon games.</p>
                         <div class="project-tags">
                             <span class="project-tag">C#</span>
                             <span class="project-tag">.NET</span>
@@ -331,4 +331,5 @@
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
+
 </html>
