--- a/allprojects.html
+++ b/allprojects.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank"><i class="fab fa-github"></i> Source Code</a>
-                            <a href="https://nico18n3.itch.io/glimmerdex" target="_blank"><i class="fas fa-gamepad"></i> Download</a>
+                            <a href="https://nico18n3.itch.io/glimmerdex" target="_blank"><i class="fab fa-itch-io"></i> Download</a>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                             <span class="project-tag">Automation</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://nico18n3.itch.io/orchidea-a-desktop-pet" target="_blank"><i class="fas fa-gamepad"></i> Download</a>
+                            <a href="https://nico18n3.itch.io/orchidea-a-desktop-pet" target="_blank"><i class="fab fa-itch-io"></i> Download</a>
                         </div>
                     </div>
                 </div>
