--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="description" content="Portfolio of Nikos Delivos - Computer Science Student & Developer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -42,6 +44,8 @@
                 </div>
                 <div class="social-links">
                     <a href="https://github.com/NikosDeliv" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="http://peaveepeanut.itch.io/" target="_blank"><i class="fab fa-itch-io"></i></a>
+                    <a href="https://ko-fi.com/peavee"><i class="fas fa-mug-hot"></i></a>
                     <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
@@ -177,7 +181,7 @@
                     </div>
                     <div class="project-content">
                         <h3>GlimmerDex</h3>
-                        <p>A Shiny hunting companion app that helps players track their encounter counts while shiny hunting in PokÃ©mon games.</p>
+                        <p>A Shiny hunting companion app that helps players track their encounter counts while shiny hunting in Pokemon games.</p>
                         <div class="project-tags">
                             <span class="project-tag">C#</span>
                             <span class="project-tag">.NET</span>
@@ -185,7 +189,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank"><i class="fab fa-github"></i> Source Code</a>
-                            <a href="https://nico18n3.itch.io/glimmerdex" target="_blank"><i class="fas fa-gamepad"></i> Download </a>
+                            <a href="https://nico18n3.itch.io/glimmerdex" target="_blank"><i class="fab fa-itch-io"></i> Download </a>
                         </div>
                     </div>
                 </div>
