Changed 3 main projects in the front page

--- a/index.html
+++ b/index.html
@@ -193,20 +193,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card flex-item box">
+                 <div class="project-card flex-item box">
                     <div class="project-image">
-                        <img src="assets/PGDIcon.png" alt="Procedurally Generated Dungeons">
+                        <img src="assets/RetroHubIcon.png" alt="RetroHub">
                     </div>
                     <div class="project-content">
-                        <h3>Procedurally Generated Dungeons</h3>
-                        <p>A tool to help you generate new dungeon layouts for your game development needs.</p>
+                        <h3>RetroHub</h3>
+                        <p>A ROM library manager for organizing and launching retro games with their respective emulators. Features drag-and-drop support and a grid based interface.</p>
                         <div class="project-tags">
                             <span class="project-tag">C#</span>
-                            <span class="project-tag">Algorithms</span>
-                            <span class="project-tag">Game Dev</span>
+                            <span class="project-tag">Database</span>
+                            <span class="project-tag">Desktop App</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/NikosDeliv/ProcedurallyGeneratedDungeon" target="_blank"><i class="fab fa-github"></i> Source Code</a>
+                            <a href="https://github.com/NikosDeliv/RetroHub" target="_blank"><i class="fab fa-github"></i> Source Code</a>
                         </div>
                     </div>
                 </div>
