--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 <div class="social-links">
                     <a href="https://github.com/NikosDeliv" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="http://peaveepeanut.itch.io/" target="_blank"><i class="fab fa-itch-io"></i></a>
-                    <a href="https://ko-fi.com/peavee"><i class="fas fa-mug-hot"></i></a>
                     <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
@@ -313,6 +312,8 @@
             </div>
             <div class="footer-social">
                 <a href="https://github.com/NikosDeliv" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="http://peaveepeanut.itch.io/" target="_blank"><i class="fab fa-itch-io"></i></a>
+                <a href="https://ko-fi.com/peavee"><i class="fas fa-mug-hot"></i></a>
                 <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
@@ -337,3 +338,4 @@
 </body>
 
 </html>
+
