--- a/pixelart.html
+++ b/pixelart.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="art-content">
                         <h3>Sableye</h3>
-                        <p>art of my favorite pokemon</p>
+                        <p>Art of my favorite pokemon</p>
                         <div class="art-tags">
                             <span class="art-tag">Pokémon</span>
                             <span class="art-tag">Character</span>
@@ -97,7 +97,7 @@
                         <img src="assets/PixelArt/El_Gato.png" alt="Cat">
                     </div>
                     <div class="art-content">
-                        <h3>El Gato</h3>
+                        <h3>Cat</h3>
                         <p>A simple pixel art cat, created as a practice in limited color palette techniques.</p>
                         <div class="art-tags">
                             <span class="art-tag">Animal</span>
@@ -135,7 +135,7 @@
                         <img src="assets/PixelArt/Commission.png" alt="Sprite art for Friend">
                     </div>
                     <div class="art-content">
-                        <h3>Character Commission</h3>
+                        <h3>Character Art</h3>
                         <p>Some of a friend's favorite Pokémon.</p>
                         <div class="art-tags">
                             <span class="art-tag">Character</span>
@@ -173,7 +173,7 @@
                         <img src="assets/PixelArt/Commission2.png" alt="Commission2">
                     </div>
                     <div class="art-content">
-                        <h3>Commission for a friend</h3>
+                        <h3>Art for a friend</h3>
                         <p>It depicts some of a friend's favorite Pokémon.</p>
                         <div class="art-tags">
                             <span class="art-tag">Character</span>
@@ -192,7 +192,7 @@
                         <img src="assets/PixelArt/Commission3.png" alt="Commission3">
                     </div>
                     <div class="art-content">
-                        <h3>Commission for a friend</h3>
+                        <h3>Art for a friend</h3>
                         <p>It depicts some of a friend's favorite Pokémon.</p>
                         <div class="art-tags">
                             <span class="art-tag">Pokémon</span>
@@ -322,4 +322,5 @@
         });
     </script>
 </body>
+
 </html>
