--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="http://peaveepeanut.itch.io/" target="_blank"><i class="fab fa-itch-io"></i></a>
                     <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href="https://www.instagram.com/delivos.n"><i class="fas fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/delivos.n"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -339,5 +339,6 @@
 </body>
 
 </html>
+
 
 
