mew project, new pixel art new links we up

--- a/allprojects.html
+++ b/allprojects.html
@@ -235,6 +235,23 @@
                         </div>
                     </div>
                 </div>
+
+                 <div class="project-card flex-item" data-category=".net">
+                    <div class="project-image">
+                        <img src="assets/AoAIcon.png" alt="ApothecaryofAshes">
+                    </div>
+                    <div class="project-content">
+                        <h3>Apothecary of Ashes</h3>
+                        <p>A game I saw in a dream of mine and decided to give form to.</p>
+                        <div class="project-tags">
+                            <span class="project-tag">Godot</span>
+                            <span class="project-tag">Game Dev</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://peaveepeanut.itch.io/apothecary-of-ashes" target="_blank"><i class="fab fa-itch-io"></i>Download</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
